fix: styles margin, gap, padding

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -56,8 +56,9 @@ img {
   }
 
   nav ul {
+    margin-top: 30px;
     flex-direction: column;
-    gap: 8px;
+    gap: 12px;
   }
 
   .logo {
